--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
+    "mui": "^0.0.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
