--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "mui": "^0.0.1",
