--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 
+..env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -27,3 +29,5 @@ dist-ssr
 postcss.config.js
 tailwind.config.js
 vite.config.js
+.vercel
+
