--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,12 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+env
+
 node_modules
 dist
 dist-ssr
 *.local
 
-..env
 
 # Editor directories and files
 .vscode/*
@@ -30,4 +31,6 @@ postcss.config.js
 tailwind.config.js
 vite.config.js
 .vercel
+
+.env
 
