--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,3 @@
 {
-  "routes": [{
-    "src": "/[^.]+", 
-    "dest": "/", 
-    "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-    "headers": "Access-Control-Allow-Methods",
-    "status": 200 
-    }]
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
